<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.sourcelab</groupId>
    <artifactId>kafka-webview</artifactId>
    <packaging>pom</packaging>
    <version>2.9.1</version>

    <!-- Define submodules -->
    <modules>
        <module>kafka-webview-plugin</module>
        <module>kafka-webview-ui</module>
    </modules>

    <!-- Module Description and Ownership -->
    <name>Kafka WebView</name>
    <description>
        A full-featured web-based Apache Kafka consumer. Kafka WebView presents an easy-to-use web based interface for
        reading data out of kafka topics and providing basic filtering and searching capabilities.
    </description>
    <url>https://github.com/SourceLabOrg/kafka-webview</url>
    <developers>
        <developer>
            <name>Stephen Powis</name>
            <email>stephen.powis@gmail.com</email>
            <organization>SourceLab.org</organization>
            <organizationUrl>https://www.sourcelab.org/</organizationUrl>
        </developer>
    </developers>

    <!-- MIT License -->
    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>

    <!-- Source Control -->
    <scm>
        <connection>scm:git:git://github.com/SourceLabOrg/kafka-webview.git</connection>
        <developerConnection>scm:git:ssh://github.com:SourceLabOrg/kafka-webview.git</developerConnection>
        <url>https://github.com/SourceLabOrg/kafka-webview/tree/master</url>
    </scm>

    <!-- Module Properties -->
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>21</java.version>

        <!-- test toggling -->
        <skipTests>false</skipTests>
    </properties>

    <!-- Use Spring Boot Starter as Parent -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.3</version>
    </parent>

    <dependencies>
        <!-- No Parent Dependencies! -->
    </dependencies>
</project>
